# DPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/dplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GolbalDefine.h  audio_ffmpeg.cpp  audio_ffmpeg.h  audio_track.cpp  audio_track.h  dplayer_audio.cpp  dplayer_audio.h  dplayer_ffmpeg.cpp  dplayer_ffmpeg.h  dplayer_media.cpp  dplayer_media.h  dplayer_status.cpp  dplayer_status.h  dplayer_video.cpp  dplayer_video.h  golbal_define.h  jni_dplayer.cpp  jni_dplayer.h  native-lib.cpp  packet_queue.cpp  packet_queue.h  yuvengine.cpp  yuvengine.h
app/src/main/java/com/example/dplayer/: AudioParam.java  AudioUtil.java  DOpenSLES.java  DPlayer.java  DPlayerActivity.java  DVideoView.java  MainActivity.java  OpenGL.java
app/src/main/java/com/example/dplayer/Opengl/: DPlayerRender.java  DPlayerSurface.java  OpenGL.java
app/src/main/java/com/example/dplayer/audio/: AudioRecordActivity.java  DAudioRecord.java  DAudioTrack.java  IAudioRecord.java  WavFile.java
app/src/main/java/com/example/dplayer/camera/: Camera2Activity.java  Camera3Activity.java  CameraActivity.java  CameraHelper.java
app/src/main/java/com/example/dplayer/image/: DCustomSurfaceView.java  DCustomTextureView.java  DCustomView.java  DImageView.java  DSurfaceView.java  DTextureView.java  ImageActivity.java
app/src/main/java/com/example/dplayer/media/: MediaActivity.java
app/src/main/java/com/example/dplayer/mediacodec/: AVEncoder.java  AVMediaMuxer.java  AacCodecActivity.java  AudioRecorder.java  H264CodecActivity.java  MediaCodecActivity.java  Mp4CodecActivity.java  SurfacePreview.java  (+2 more)
app/src/main/libs/include/libavutil/: ffversion.h
app/src/main/res/layout/: activity_aac.xml  activity_aac_codec.xml  activity_audio_record.xml  activity_camera.xml  activity_camera2.xml  activity_camera3.xml  activity_extractor_mp4.xml  activity_g_l_show_image.xml  activity_h264.xml  activity_h264_codec.xml  activity_image.xml  activity_main.xml  activity_media.xml  activity_media_codec.xml  activity_mp4.xml  activity_mp4_codec.xml  activity_opengles.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/dplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
